Fixed the UI issue of home page and added scrollbar in sidebar

--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -26,3 +26,34 @@
     bottom: 0;
     left: 20px;
 }
+
+.members-container {
+    height: 55vh;
+    overflow: hidden;
+}
+
+.members-container:hover {
+    overflow-y: scroll;
+}
+
+
+/*
+ *  STYLING OF SCROLLBAR
+ */
+
+#custom-scrollbar::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+#custom-scrollbar::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+#custom-scrollbar::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #555;
+}
